--- a/charts/tp-cp-core-ops/values.yaml
+++ b/charts/tp-cp-core-ops/values.yaml
@@ -5,6 +5,10 @@
 #
 
 global:
+  tibco:
+    image_name:
+      cpScripts: "core-cp-scripts"
+    is_replica_region: false
   external:
     environment: "production"
     admin:
