--- a/charts/tp-cp-core/charts/pengine/values.yaml
+++ b/charts/tp-cp-core/charts/pengine/values.yaml
@@ -6,11 +6,15 @@
 
 global:
   tibco:
+    image_name:
+      pengine: ""
+    image_repo_path: ""
+    is_replica_region: false
     logging:
       fluentbit:
         image:
-          name: "fluentbit"
-          tag: 2.2.2
+          name: "common-fluentbit"
+          tag: 3.1.4
   external:
     enableLogging: false
     region: ""
