--- a/charts/tp-cp-core/charts/orchestrator/values.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/values.yaml
@@ -12,11 +12,20 @@ global:
     platformEmailNotificationCcAddresses: ""
     environment: ""
   tibco:
+    image_name:
+      orchestrator: ""
+    image_repo_path: ""      
+    is_replica_region: false
     logging:
       fluentbit:
         image:
-          name: "fluentbit"
-          tag: 3.0.2
+          name: "common-fluentbit"
+          tag: 3.1.4
+    check_dependencies:
+      distroless_debian:
+        name: "common-distroless-base-debian-debug"
+        tag: 12
+      
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
